# game_colored_figures

./: README.md  fireworks.py  levels.py  main.py  pyproject.toml  settings.py  sprites.py
docs/: game_colored_figures.apk  index.html
states/: gameover.py  gameplay.py  level_select.py  menu.py  next_level.py  victory.py
